# pixels-client

./: .gitignore  Cargo.toml  Readme.md
.githooks/: pre-commit
pixels-canvas/: Cargo.toml
pixels-canvas/src/: client.rs  elem.rs  error.rs  image.rs  layer.rs  lib.rs
pixels-interface/: Cargo.toml
pixels-interface/src/: canvas.rs  input.rs  main.rs  panel.rs  state.rs
pixels-util/: Cargo.toml
pixels-util/src/: color.rs  cooldown.rs  lib.rs  pixels.rs
src/: canvas.rs  client.rs  main.rs  util.rs
